incluindo endpoint de validacao